# Copyright (c) 2016 Intel Corporation. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/android/rules.gni")

android_apk("xwalk_app_template_apk") {
  apk_name = "XWalkAppTemplate"
  android_manifest = "AndroidManifest.xml"
  java_files = [ "src/org/xwalk/app/template/AppTemplateActivity.java" ]
  deps = [
    ":xwalk_app_template_apk_assets",
    ":xwalk_app_template_apk_resources",
    "//xwalk/app/android/runtime_client:xwalk_app_runtime_java",
    "//xwalk/runtime/android/core:xwalk_core_java",
  ]
}

android_assets("xwalk_app_template_apk_assets") {
  renaming_sources = [
    "//xwalk/test/android/data/index.html",
    "//xwalk/test/android/data/sampapp-icon-helloworld.png",
  ]
  renaming_destinations = [
    "www/index.html",
    "www/sampapp-icon-helloworld.png",
  ]
}

android_resources("xwalk_app_template_apk_resources") {
  resource_dirs = [ "res" ]
  custom_package = "org.xwalk.app.template"
}
